{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 731,
  "lineage": "f34274eb-8023-fa63-0017-92c5b47bf62b",
  "resources": [
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07c00a5823fd1973f",
            "public_dns": "ec2-18-192-137-185.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.137.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Sokoshopper-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.creating_vpc.aws_internet_gateway.main_gw",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404055573073:internet-gateway/igw-0964d85504f781b58",
            "id": "igw-0964d85504f781b58",
            "owner_id": "404055573073",
            "tags": {
              "Name": "SokoShopper Internet gateway"
            },
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-aws-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:loadbalancer/app/sokoshopper-api-lb/af1a469bef8e7a77",
            "arn_suffix": "app/sokoshopper-api-lb/af1a469bef8e7a77",
            "dns_name": "internal-sokoshopper-api-lb-828188882.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:loadbalancer/app/sokoshopper-api-lb/af1a469bef8e7a77",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sokoshopper-api-lb",
            "security_groups": [
              "sg-0389aff6073fb59c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-061d480a9afa9d8bf"
              },
              {
                "subnet_id": "subnet-0f1891a391148cc4c"
              }
            ],
            "subnets": [
              "subnet-061d480a9afa9d8bf",
              "subnet-0f1891a391148cc4c"
            ],
            "tags": {
              "Name": "sokoshopper-api-alb"
            },
            "vpc_id": "vpc-00604fe3bdb98be4c",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.creating_vpc.aws_security_group.allow_http_https",
            "module.creating_vpc.aws_subnet.private_subnet",
            "module.creating_vpc.aws_subnet.public_subnet_B",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sokoshopper-api-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:listener/app/sokoshopper-api-lb/af1a469bef8e7a77/cee1058aea3e7a24",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:targetgroup/SokoShopper-API-target-group/24085a757ee4a42d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:listener/app/sokoshopper-api-lb/af1a469bef8e7a77/cee1058aea3e7a24",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:loadbalancer/app/sokoshopper-api-lb/af1a469bef8e7a77",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.creating_alb.aws_lb.my-aws-alb",
            "module.creating_alb.aws_lb_target_group.my-target-group",
            "module.creating_vpc.aws_security_group.allow_http_https",
            "module.creating_vpc.aws_subnet.private_subnet",
            "module.creating_vpc.aws_subnet.public_subnet_B",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:targetgroup/SokoShopper-API-tg/59f699d894b7a4af",
            "arn_suffix": "targetgroup/SokoShopper-API-tg/59f699d894b7a4af",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:targetgroup/SokoShopper-API-tg/59f699d894b7a4af",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "SokoShopper-API-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:targetgroup/SokoShopper-API-target-group/24085a757ee4a42d",
            "arn_suffix": "targetgroup/SokoShopper-API-target-group/24085a757ee4a42d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:404055573073:targetgroup/SokoShopper-API-target-group/24085a757ee4a42d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "SokoShopper-API-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c00a5823fd1973f",
            "id": "nat-0793fa61a6175adc3",
            "network_interface_id": "eni-003e4abc54cf9c576",
            "private_ip": "10.0.1.162",
            "public_ip": "18.192.137.185",
            "subnet_id": "subnet-0cb3b50a28cf306e3",
            "tags": {
              "Name": "Sokoshopper-nat-gateway"
            }
          },
          "dependencies": [
            "module.creating_vpc.aws_eip.nat_gateway_eip",
            "module.creating_vpc.aws_internet_gateway.main_gw",
            "module.creating_vpc.aws_subnet.public_subnet_A",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02f74a7509513c750",
            "owner_id": "404055573073",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0793fa61a6175adc3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SokoShopper-private-rtbl"
            },
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_eip.nat_gateway_eip",
            "module.creating_vpc.aws_internet_gateway.main_gw",
            "module.creating_vpc.aws_nat_gateway.private_nat_gw",
            "module.creating_vpc.aws_subnet.public_subnet_A",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b2a47ccd080b4058",
            "owner_id": "404055573073",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0964d85504f781b58",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SokoShopper-public-rtbl"
            },
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_internet_gateway.main_gw",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociation_private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3dfa6e37f593c59",
            "route_table_id": "rtb-02f74a7509513c750",
            "subnet_id": "subnet-061d480a9afa9d8bf"
          },
          "dependencies": [
            "module.creating_vpc.aws_eip.nat_gateway_eip",
            "module.creating_vpc.aws_internet_gateway.main_gw",
            "module.creating_vpc.aws_nat_gateway.private_nat_gw",
            "module.creating_vpc.aws_route_table.private_rtbl",
            "module.creating_vpc.aws_subnet.private_subnet",
            "module.creating_vpc.aws_subnet.public_subnet_A",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociation_public_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e326755f60142141",
            "route_table_id": "rtb-0b2a47ccd080b4058",
            "subnet_id": "subnet-0cb3b50a28cf306e3"
          },
          "dependencies": [
            "module.creating_vpc.aws_internet_gateway.main_gw",
            "module.creating_vpc.aws_route_table.public_rtbl",
            "module.creating_vpc.aws_subnet.public_subnet_A",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociation_public_sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac0b4410a26a9bb8",
            "route_table_id": "rtb-0b2a47ccd080b4058",
            "subnet_id": "subnet-0f1891a391148cc4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_internet_gateway.main_gw",
            "module.creating_vpc.aws_route_table.public_rtbl",
            "module.creating_vpc.aws_subnet.public_subnet_B",
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404055573073:security-group/sg-0389aff6073fb59c2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0389aff6073fb59c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "404055573073",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sokoshopper_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_vpc.main_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404055573073:subnet/subnet-061d480a9afa9d8bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-061d480a9afa9d8bf",
            "map_public_ip_on_launch": false,
            "owner_id": "404055573073",
            "tags": {
              "Name": "SokoShopper-private-network"
            },
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404055573073:subnet/subnet-0cb3b50a28cf306e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cb3b50a28cf306e3",
            "map_public_ip_on_launch": false,
            "owner_id": "404055573073",
            "tags": {
              "Name": "SokoShopper-publicA-network"
            },
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404055573073:subnet/subnet-0f1891a391148cc4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f1891a391148cc4c",
            "map_public_ip_on_launch": false,
            "owner_id": "404055573073",
            "tags": {
              "Name": "SokoShopper-publicB-network"
            },
            "vpc_id": "vpc-00604fe3bdb98be4c"
          },
          "dependencies": [
            "module.creating_vpc.aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "module": "module.creating_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:404055573073:vpc/vpc-00604fe3bdb98be4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec5ee58c662094a2",
            "default_route_table_id": "rtb-0df4e506b222d23d4",
            "default_security_group_id": "sg-029eea40a33f5f219",
            "dhcp_options_id": "dopt-6e956c04",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00604fe3bdb98be4c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0df4e506b222d23d4",
            "owner_id": "404055573073",
            "tags": {
              "Name": "SokoShopper-Network"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}